--- a/repository.yaml
+++ b/repository.yaml
@@ -1,3 +1,4 @@
 name: "EVCC-Smartload Add-on Repository"
 url: "https://github.com/Krinco1/HA_Addon_EVCC-Smartload"
 maintainer: "Krinco1"
+channel: stable
